--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										</footer>
 									</li>
 									<li>
-										<span class="icon  major style3 fa-university"></span>
+										<span class="icon solid major style3 fa-university"></span>
 										<h3>Part 2</h3>
 										<p>Why did I choose RMIT?</p>
 										<footer class="major">
@@ -138,7 +138,7 @@
 										</footer>
 									</li>
 									<li>
-										<span class="icon  major style5 fa-graduation-cap"></span>
+										<span class="icon solid major style5 fa-graduation-cap"></span>
 										<h3>Part 2</h3>
 										<p>Learning Style Test</p>
 										<footer class="major">
