--- a/generic4.html
+++ b/generic4.html
@@ -55,7 +55,7 @@
 									<li><p align="justify">Get hands-on with optimizing the CI/CD pipelines</p></li>
 									<br>
 								</ul>
-								<p>LINK: <a href ="https://itviec.com/it-jobs/senior-ios-developer-ai-product-elsa-3408"><font color="0000FF"> https://itviec.com/it-jobs/senior-ios-developer-ai-product-elsa-3408</font></a></p>
+								<p>LINK: Itviec.com. (2019). Senior iOS Developer (AI product) at ELSA | ITviec. [online] Available at:<a href ="https://itviec.com/it-jobs/senior-ios-developer-ai-product-elsa-3408"><font color="0000FF"> https://itviec.com/it-jobs/senior-ios-developer-ai-product-elsa-3408 </font>[Accessed 8 Nov. 2019].</a></p>
 							</section>
 
 					</div>
